[package]
name = "tasks"
version = "1.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
chrono-tz = "0.6"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
rayon = "1"
rusqlite = "0.28"
log = "0.4"
env_logger = "0.9"
